[package]
name = "level_coin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
rand = "0.5.0"
openssl = { version = "0.10"}
criterion = "0.3"

[[bench]]
name = "pow_bench"
harness = false
