[package]
name = "level_coin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
shamirsecretsharing = "0.1.5"

tokio = { version = "1.14.0", features = ["full"] }
hex = "0.4"
rand = "0.5.0"
openssl = { version = "0.10"}
criterion = "0.3"

futures = "0.3.0"
async-std = "1"

tiny-bip39 = "0.8.2"
tiny-hderive = "0.3.0"
#libsecp256k1 = "0.7.0"
secp256k1 = "0.20.3"
bitcoin = "0.27.1"
qrcode = "0.12.0"
qrcode-generator="4.1.2"

[[bench]]
name = "pow_bench"
harness = false
